bad/func_call_before_definition_with_invalid_arg_type.example_compiler_output
ERROR
[1mbad/func_call_before_definition_with_invalid_arg_type.lat:10:10: [1;31merror: [0;1mUnknown class: X[m
void foo(X x) {}
         [1;32m^[m
